--- a/index.html
+++ b/index.html
@@ -1,1 +1,22 @@
+<!DOCTYPE html>
+<html>
+    <head>
+        <link rel ="stylesheet" href = "style.css script"/>
+    </head>
+    <body>
+        <img
+        src = https://upload.wikimedia.org/wikipedia/commons/thumb/0/0d/%D0%9C%D1%8B%D1%88%D1%8C_2.jpg/1200px-%D0%9C%D1%8B%D1%88%D1%8C_2.jpg
+       />
+        <h1>Prophet Orpheus</h1>
+        <p>Coder Dino</p>
+        <p>will code food</p>
+        <p>I love crashing out in weird places lol</p>
+        <p>oh wow this actually updates in real time thats crazy so wait how long can i make this string</p>
+        <p> hmmm what should i do win that boba hmmmmmmmmmm </p>
+        <p> man i have no clue what to put on this website</p>
+        <p> </p>
+    </body>
+</html>
+
+
 
